--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Lexend:wght@100..900&display=swap');
 
 :root {
   line-height: 1.5;
@@ -19,4 +20,13 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-style: normal;
+}
+
+button {
+  cursor: pointer;
 }
